--- a/nb/EDA_mulal.ipynb
+++ b/nb/EDA_mulal.ipynb
@@ -2435,45 +2435,285 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import random\n",
+    "from collections import Counter\n",
+    "from multiprocessing import Pool\n",
+    "\n",
+    "from Bio.Restriction import Analysis, AllEnzymes\n",
+    "from Bio.SeqRecord import SeqRecord\n",
+    "from Bio import SeqIO\n",
+    "import tqdm\n",
+    "\n",
+    "PATH_TO_SEQS = \"../data/raw/sequence.fasta\"\n",
+    "THREADS = 24\n",
+    "PROB = 0.01\n",
+    "\n",
+    "fasta = SeqIO.parse(PATH_TO_SEQS, \"fasta\")\n",
+    "enzymes = AllEnzymes.copy()\n",
+    "\n",
+    "\n",
+    "def cleanup_enzymes():\n",
+    "    fasta = SeqIO.parse(PATH_TO_SEQS, \"fasta\")\n",
+    "    n = 0\n",
+    "    pot_rs = []\n",
+    "    for rec in tqdm.tqdm(fasta, \"Seqs\", 56446):\n",
+    "        if random.random() > PROB:\n",
+    "            continue\n",
+    "        n += 1\n",
+    "        anal = Analysis(enzymes, rec.seq, linear=False)\n",
+    "        anal.mapping # dict[RS_name, positions]\n",
+    "        \n",
+    "        for rest_enz, positions in anal.mapping.items():\n",
+    "            if len(positions) == 1:\n",
+    "                pot_rs.append(rest_enz)\n",
+    "\n",
+    "    ctr = Counter(pot_rs)\n",
+    "    m = 0\n",
+    "    for enz, amount in ctr.items():\n",
+    "        if amount != n:\n",
+    "            if enz in enzymes:\n",
+    "                enzymes.remove(enz)\n",
+    "                m += 1\n",
+    "    print(f\"Removed {m} enzymes\")\n",
+    "    \n",
+    "\n",
+    "def extract_restr_enz(rec: SeqRecord) -> list:\n",
+    "    anal = Analysis(enzymes, rec.seq, linear=False)\n",
+    "    pot_rs = []\n",
+    "    for restr_enz, positions in anal.mapping.items():\n",
+    "        if len(positions) == 1:\n",
+    "            pot_rs.append(restr_enz)\n",
+    "    return pot_rs"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Seqs: 100%|█████████▉| 56445/56446 [03:47<00:00, 248.52it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Removed 205 enzymes\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "cleanup_enzymes()"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(773, 978)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(enzymes), len(AllEnzymes)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 23 min\n",
+    "fasta = SeqIO.parse(PATH_TO_SEQS, \"fasta\")\n",
+    "with Pool(THREADS) as p:\n",
+    "    collection_of_pot_rs = p.map(extract_restr_enz, fasta)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import json"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pot_rs = []\n",
+    "for xx in collection_of_pot_rs:\n",
+    "    for x in xx:\n",
+    "        pot_rs.append(x)  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ctr = Counter(pot_rs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{Bsu15I: 56384,\n",
+       " Bsa29I: 56384,\n",
+       " ClaI: 56384,\n",
+       " BseCI: 56384,\n",
+       " BshVI: 56384,\n",
+       " BspDI: 56384,\n",
+       " BsuTUI: 56384}"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "most_frequent_rs = {r: v for r, v in ctr.items() if v > 56446 - 1000}\n",
+    "most_frequent_rs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enzyme\tSite\t#Cutted mtDNA\n",
+      "Bsu15I\tATCGAT\t56384\n",
+      "Bsa29I\tATCGAT\t56384\n",
+      "ClaI\tATCGAT\t56384\n",
+      "BseCI\tATCGAT\t56384\n",
+      "BshVI\tATCGAT\t56384\n",
+      "BspDI\tATCGAT\t56384\n",
+      "BsuTUI\tATCGAT\t56384\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Enzyme\", \"Site\", \"#Cutted mtDNA\", sep=\"\\t\")\n",
+    "for rs, num in most_frequent_rs.items():\n",
+    "    print(rs, rs.site, num, sep=\"\\t\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "('BsuTUI', BsuTUI)"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "repr(rs), rs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Agilent Technologies,\n",
+      "EURx Ltd.,\n",
+      "Life Technologies,\n",
+      "Minotech Biotechnology,\n",
+      "Molecular Biology Resources - CHIMERx,\n",
+      "New England Biolabs,\n",
+      "Nippon Gene Co., Ltd.,\n",
+      "Promega Corporation,\n",
+      "Roche Applied Science,\n",
+      "SibEnzyme Ltd.,\n",
+      "Sigma Chemical Corporation,\n",
+      "SinaClon BioScience Co.,\n",
+      "Takara Bio Inc.,\n",
+      "Toyobo Biochemicals,\n",
+      "Vivantis Technologies\n"
+     ]
+    }
+   ],
+   "source": [
+    "rs.all_suppliers()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "Object of type RestrictionType is not JSON serializable",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m/home/kpotoh/mt-deletions/nb/EDA_mulal.ipynb Cell 43'\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      <a href='vscode-notebook-cell:/home/kpotoh/mt-deletions/nb/EDA_mulal.ipynb#ch0000042?line=0'>1</a>\u001b[0m \u001b[39mwith\u001b[39;00m \u001b[39mopen\u001b[39m(\u001b[39m\"\u001b[39m\u001b[39m../data/interim/collection_of_pot_rs.json\u001b[39m\u001b[39m\"\u001b[39m, \u001b[39m\"\u001b[39m\u001b[39mw\u001b[39m\u001b[39m\"\u001b[39m) \u001b[39mas\u001b[39;00m fout:\n\u001b[0;32m----> <a href='vscode-notebook-cell:/home/kpotoh/mt-deletions/nb/EDA_mulal.ipynb#ch0000042?line=1'>2</a>\u001b[0m     json\u001b[39m.\u001b[39;49mdump(collection_of_pot_rs, fout)\n",
+      "File \u001b[0;32m/usr/lib/python3.9/json/__init__.py:179\u001b[0m, in \u001b[0;36mdump\u001b[0;34m(obj, fp, skipkeys, ensure_ascii, check_circular, allow_nan, cls, indent, separators, default, sort_keys, **kw)\u001b[0m\n\u001b[1;32m    <a href='file:///usr/lib/python3.9/json/__init__.py?line=172'>173</a>\u001b[0m     iterable \u001b[39m=\u001b[39m \u001b[39mcls\u001b[39m(skipkeys\u001b[39m=\u001b[39mskipkeys, ensure_ascii\u001b[39m=\u001b[39mensure_ascii,\n\u001b[1;32m    <a href='file:///usr/lib/python3.9/json/__init__.py?line=173'>174</a>\u001b[0m         check_circular\u001b[39m=\u001b[39mcheck_circular, allow_nan\u001b[39m=\u001b[39mallow_nan, indent\u001b[39m=\u001b[39mindent,\n\u001b[1;32m    <a href='file:///usr/lib/python3.9/json/__init__.py?line=174'>175</a>\u001b[0m         separators\u001b[39m=\u001b[39mseparators,\n\u001b[1;32m    <a href='file:///usr/lib/python3.9/json/__init__.py?line=175'>176</a>\u001b[0m         default\u001b[39m=\u001b[39mdefault, sort_keys\u001b[39m=\u001b[39msort_keys, \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkw)\u001b[39m.\u001b[39miterencode(obj)\n\u001b[1;32m    <a href='file:///usr/lib/python3.9/json/__init__.py?line=176'>177</a>\u001b[0m \u001b[39m# could accelerate with writelines in some versions of Python, at\u001b[39;00m\n\u001b[1;32m    <a href='file:///usr/lib/python3.9/json/__init__.py?line=177'>178</a>\u001b[0m \u001b[39m# a debuggability cost\u001b[39;00m\n\u001b[0;32m--> <a href='file:///usr/lib/python3.9/json/__init__.py?line=178'>179</a>\u001b[0m \u001b[39mfor\u001b[39;00m chunk \u001b[39min\u001b[39;00m iterable:\n\u001b[1;32m    <a href='file:///usr/lib/python3.9/json/__init__.py?line=179'>180</a>\u001b[0m     fp\u001b[39m.\u001b[39mwrite(chunk)\n",
+      "File \u001b[0;32m/usr/lib/python3.9/json/encoder.py:429\u001b[0m, in \u001b[0;36m_make_iterencode.<locals>._iterencode\u001b[0;34m(o, _current_indent_level)\u001b[0m\n\u001b[1;32m    <a href='file:///usr/lib/python3.9/json/encoder.py?line=426'>427</a>\u001b[0m     \u001b[39myield\u001b[39;00m _floatstr(o)\n\u001b[1;32m    <a href='file:///usr/lib/python3.9/json/encoder.py?line=427'>428</a>\u001b[0m \u001b[39melif\u001b[39;00m \u001b[39misinstance\u001b[39m(o, (\u001b[39mlist\u001b[39m, \u001b[39mtuple\u001b[39m)):\n\u001b[0;32m--> <a href='file:///usr/lib/python3.9/json/encoder.py?line=428'>429</a>\u001b[0m     \u001b[39myield from\u001b[39;00m _iterencode_list(o, _current_indent_level)\n\u001b[1;32m    <a href='file:///usr/lib/python3.9/json/encoder.py?line=429'>430</a>\u001b[0m \u001b[39melif\u001b[39;00m \u001b[39misinstance\u001b[39m(o, \u001b[39mdict\u001b[39m):\n\u001b[1;32m    <a href='file:///usr/lib/python3.9/json/encoder.py?line=430'>431</a>\u001b[0m     \u001b[39myield from\u001b[39;00m _iterencode_dict(o, _current_indent_level)\n",
+      "File \u001b[0;32m/usr/lib/python3.9/json/encoder.py:325\u001b[0m, in \u001b[0;36m_make_iterencode.<locals>._iterencode_list\u001b[0;34m(lst, _current_indent_level)\u001b[0m\n\u001b[1;32m    <a href='file:///usr/lib/python3.9/json/encoder.py?line=322'>323</a>\u001b[0m         \u001b[39melse\u001b[39;00m:\n\u001b[1;32m    <a href='file:///usr/lib/python3.9/json/encoder.py?line=323'>324</a>\u001b[0m             chunks \u001b[39m=\u001b[39m _iterencode(value, _current_indent_level)\n\u001b[0;32m--> <a href='file:///usr/lib/python3.9/json/encoder.py?line=324'>325</a>\u001b[0m         \u001b[39myield from\u001b[39;00m chunks\n\u001b[1;32m    <a href='file:///usr/lib/python3.9/json/encoder.py?line=325'>326</a>\u001b[0m \u001b[39mif\u001b[39;00m newline_indent \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m    <a href='file:///usr/lib/python3.9/json/encoder.py?line=326'>327</a>\u001b[0m     _current_indent_level \u001b[39m-\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n",
+      "File \u001b[0;32m/usr/lib/python3.9/json/encoder.py:325\u001b[0m, in \u001b[0;36m_make_iterencode.<locals>._iterencode_list\u001b[0;34m(lst, _current_indent_level)\u001b[0m\n\u001b[1;32m    <a href='file:///usr/lib/python3.9/json/encoder.py?line=322'>323</a>\u001b[0m         \u001b[39melse\u001b[39;00m:\n\u001b[1;32m    <a href='file:///usr/lib/python3.9/json/encoder.py?line=323'>324</a>\u001b[0m             chunks \u001b[39m=\u001b[39m _iterencode(value, _current_indent_level)\n\u001b[0;32m--> <a href='file:///usr/lib/python3.9/json/encoder.py?line=324'>325</a>\u001b[0m         \u001b[39myield from\u001b[39;00m chunks\n\u001b[1;32m    <a href='file:///usr/lib/python3.9/json/encoder.py?line=325'>326</a>\u001b[0m \u001b[39mif\u001b[39;00m newline_indent \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n\u001b[1;32m    <a href='file:///usr/lib/python3.9/json/encoder.py?line=326'>327</a>\u001b[0m     _current_indent_level \u001b[39m-\u001b[39m\u001b[39m=\u001b[39m \u001b[39m1\u001b[39m\n",
+      "File \u001b[0;32m/usr/lib/python3.9/json/encoder.py:438\u001b[0m, in \u001b[0;36m_make_iterencode.<locals>._iterencode\u001b[0;34m(o, _current_indent_level)\u001b[0m\n\u001b[1;32m    <a href='file:///usr/lib/python3.9/json/encoder.py?line=435'>436</a>\u001b[0m         \u001b[39mraise\u001b[39;00m \u001b[39mValueError\u001b[39;00m(\u001b[39m\"\u001b[39m\u001b[39mCircular reference detected\u001b[39m\u001b[39m\"\u001b[39m)\n\u001b[1;32m    <a href='file:///usr/lib/python3.9/json/encoder.py?line=436'>437</a>\u001b[0m     markers[markerid] \u001b[39m=\u001b[39m o\n\u001b[0;32m--> <a href='file:///usr/lib/python3.9/json/encoder.py?line=437'>438</a>\u001b[0m o \u001b[39m=\u001b[39m _default(o)\n\u001b[1;32m    <a href='file:///usr/lib/python3.9/json/encoder.py?line=438'>439</a>\u001b[0m \u001b[39myield from\u001b[39;00m _iterencode(o, _current_indent_level)\n\u001b[1;32m    <a href='file:///usr/lib/python3.9/json/encoder.py?line=439'>440</a>\u001b[0m \u001b[39mif\u001b[39;00m markers \u001b[39mis\u001b[39;00m \u001b[39mnot\u001b[39;00m \u001b[39mNone\u001b[39;00m:\n",
+      "File \u001b[0;32m/usr/lib/python3.9/json/encoder.py:179\u001b[0m, in \u001b[0;36mJSONEncoder.default\u001b[0;34m(self, o)\u001b[0m\n\u001b[1;32m    <a href='file:///usr/lib/python3.9/json/encoder.py?line=159'>160</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mdefault\u001b[39m(\u001b[39mself\u001b[39m, o):\n\u001b[1;32m    <a href='file:///usr/lib/python3.9/json/encoder.py?line=160'>161</a>\u001b[0m     \u001b[39m\"\"\"Implement this method in a subclass such that it returns\u001b[39;00m\n\u001b[1;32m    <a href='file:///usr/lib/python3.9/json/encoder.py?line=161'>162</a>\u001b[0m \u001b[39m    a serializable object for ``o``, or calls the base implementation\u001b[39;00m\n\u001b[1;32m    <a href='file:///usr/lib/python3.9/json/encoder.py?line=162'>163</a>\u001b[0m \u001b[39m    (to raise a ``TypeError``).\u001b[39;00m\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m    <a href='file:///usr/lib/python3.9/json/encoder.py?line=176'>177</a>\u001b[0m \n\u001b[1;32m    <a href='file:///usr/lib/python3.9/json/encoder.py?line=177'>178</a>\u001b[0m \u001b[39m    \"\"\"\u001b[39;00m\n\u001b[0;32m--> <a href='file:///usr/lib/python3.9/json/encoder.py?line=178'>179</a>\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mTypeError\u001b[39;00m(\u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mObject of type \u001b[39m\u001b[39m{\u001b[39;00mo\u001b[39m.\u001b[39m\u001b[39m__class__\u001b[39m\u001b[39m.\u001b[39m\u001b[39m__name__\u001b[39m\u001b[39m}\u001b[39;00m\u001b[39m \u001b[39m\u001b[39m'\u001b[39m\n\u001b[1;32m    <a href='file:///usr/lib/python3.9/json/encoder.py?line=179'>180</a>\u001b[0m                     \u001b[39mf\u001b[39m\u001b[39m'\u001b[39m\u001b[39mis not JSON serializable\u001b[39m\u001b[39m'\u001b[39m)\n",
+      "\u001b[0;31mTypeError\u001b[0m: Object of type RestrictionType is not JSON serializable"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"../data/interim/collection_of_pot_rs.json\", \"w\") as fout:\n",
+    "    json.dump(collection_of_pot_rs, fout)"
+   ]
   },
   {
    "cell_type": "code",
