--- a/nb/EDA_bruteforce.ipynb
+++ b/nb/EDA_bruteforce.ipynb
@@ -884,12 +884,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Positions of **ClaI**\n",
+    "[1214, 1219]"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 109,
    "metadata": {},
    "outputs": [],
    "source": [
-    "clai_pos = list(range(1214, 1220))"
+    "clai_pos = list(range(1214-1, 1220+1))"
    ]
   },
   {
@@ -901,7 +909,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -945,6 +953,26 @@
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>1212</th>\n",
+       "      <td>1213</td>\n",
+       "      <td>0</td>\n",
+       "      <td>56439</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
        "    <tr>\n",
        "      <th>1213</th>\n",
        "      <td>1214</td>\n",
@@ -1065,21 +1093,43 @@
        "      <td>6</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1219</th>\n",
+       "      <td>1220</td>\n",
+       "      <td>0</td>\n",
+       "      <td>56439</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
        "       Pos      G      A      T      C  R  Y  W  S  M  K  H  B  V  D  N  -\n",
+       "1212  1213      0  56439      0      0  0  0  0  0  0  0  0  0  0  0  4  2\n",
        "1213  1214      0  56439      0      0  0  0  0  0  0  0  0  0  0  0  5  1\n",
        "1214  1215      0      0  56439      1  0  0  0  0  0  0  0  0  0  0  5  0\n",
        "1215  1216      0      0      0  56440  0  0  0  0  0  0  0  0  0  0  5  0\n",
        "1216  1217  56440      0      0      0  0  0  0  0  0  0  0  0  0  0  5  0\n",
        "1217  1218      0  56440      0      0  0  0  0  0  0  0  0  0  0  0  5  0\n",
-       "1218  1219      0      0  56439      0  0  0  0  0  0  0  0  0  0  0  6  0"
+       "1218  1219      0      0  56439      0  0  0  0  0  0  0  0  0  0  0  6  0\n",
+       "1219  1220      0  56439      0      0  0  0  0  0  0  0  0  0  0  0  6  0"
       ]
      },
-     "execution_count": 104,
+     "execution_count": 110,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1098,7 +1148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [
     {
@@ -1150,18 +1200,32 @@
        "      <td>0.000005</td>\n",
        "      <td>0.000010</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1438</th>\n",
+       "      <td>chrM:1220</td>\n",
+       "      <td>[\"A\",\"ACTACCTGACCGGCGAGACATTCCAGCTCCCCGCCGTCAC...</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000005</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "          locus    alleles    AF_hom    AF_het\n",
-       "1435  chrM:1214  [\"A\",\"G\"]  0.000000  0.000005\n",
-       "1436  chrM:1215  [\"T\",\"C\"]  0.000000  0.000010\n",
-       "1437  chrM:1219  [\"T\",\"C\"]  0.000005  0.000010"
+       "          locus                                            alleles    AF_hom  \\\n",
+       "1435  chrM:1214                                          [\"A\",\"G\"]  0.000000   \n",
+       "1436  chrM:1215                                          [\"T\",\"C\"]  0.000000   \n",
+       "1437  chrM:1219                                          [\"T\",\"C\"]  0.000005   \n",
+       "1438  chrM:1220  [\"A\",\"ACTACCTGACCGGCGAGACATTCCAGCTCCCCGCCGTCAC...  0.000000   \n",
+       "\n",
+       "        AF_het  \n",
+       "1435  0.000005  \n",
+       "1436  0.000010  \n",
+       "1437  0.000010  \n",
+       "1438  0.000005  "
       ]
      },
-     "execution_count": 105,
+     "execution_count": 111,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1183,7 +1247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [
     {
@@ -1297,13 +1361,13 @@
        "1437                      [[\"I\",1],[\"J\",1]]  1219  "
       ]
      },
-     "execution_count": 100,
+     "execution_count": 106,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "helix[(helix.Pos > 1213) & (helix.Pos < 1220)]"
+    "helix[helix.Pos.isin(clai_pos)]"
    ]
   },
   {
