--- a/nb/EDA_bruteforce.ipynb
+++ b/nb/EDA_bruteforce.ipynb
@@ -1247,7 +1247,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -1335,33 +1335,53 @@
        "      <td>[[\"I\",1],[\"J\",1]]</td>\n",
        "      <td>1219</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1438</th>\n",
+       "      <td>chrM:1220</td>\n",
+       "      <td>[\"A\",\"ACTACCTGACCGGCGAGACATTCCAGCTCCCCGCCGTCAC...</td>\n",
+       "      <td>rRNA_gene</td>\n",
+       "      <td>MT-RNR1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.000005</td>\n",
+       "      <td>0.037037</td>\n",
+       "      <td>0.037037</td>\n",
+       "      <td>[]</td>\n",
+       "      <td>[[\"H\",1]]</td>\n",
+       "      <td>1220</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "          locus    alleles    feature     gene  counts_hom    AF_hom  \\\n",
-       "1435  chrM:1214  [\"A\",\"G\"]  rRNA_gene  MT-RNR1           0  0.000000   \n",
-       "1436  chrM:1215  [\"T\",\"C\"]  rRNA_gene  MT-RNR1           0  0.000000   \n",
-       "1437  chrM:1219  [\"T\",\"C\"]  rRNA_gene  MT-RNR1           1  0.000005   \n",
+       "          locus                                            alleles    feature  \\\n",
+       "1435  chrM:1214                                          [\"A\",\"G\"]  rRNA_gene   \n",
+       "1436  chrM:1215                                          [\"T\",\"C\"]  rRNA_gene   \n",
+       "1437  chrM:1219                                          [\"T\",\"C\"]  rRNA_gene   \n",
+       "1438  chrM:1220  [\"A\",\"ACTACCTGACCGGCGAGACATTCCAGCTCCCCGCCGTCAC...  rRNA_gene   \n",
        "\n",
-       "      counts_het    AF_het  mean_ARF   max_ARF  \\\n",
-       "1435           1  0.000005  0.096591  0.096591   \n",
-       "1436           2  0.000010  0.178110  0.272730   \n",
-       "1437           2  0.000010  0.096162  0.102890   \n",
+       "         gene  counts_hom    AF_hom  counts_het    AF_het  mean_ARF   max_ARF  \\\n",
+       "1435  MT-RNR1           0  0.000000           1  0.000005  0.096591  0.096591   \n",
+       "1436  MT-RNR1           0  0.000000           2  0.000010  0.178110  0.272730   \n",
+       "1437  MT-RNR1           1  0.000005           2  0.000010  0.096162  0.102890   \n",
+       "1438  MT-RNR1           0  0.000000           1  0.000005  0.037037  0.037037   \n",
        "\n",
        "     haplogroups_for_homoplasmic_variants  \\\n",
        "1435                                   []   \n",
        "1436                                   []   \n",
        "1437                            [[\"J\",1]]   \n",
+       "1438                                   []   \n",
        "\n",
        "     haplogroups_for_heteroplasmic_variants   Pos  \n",
        "1435                              [[\"H\",1]]  1214  \n",
        "1436                    [[\"L1\",1],[\"L2\",1]]  1215  \n",
-       "1437                      [[\"I\",1],[\"J\",1]]  1219  "
+       "1437                      [[\"I\",1],[\"J\",1]]  1219  \n",
+       "1438                              [[\"H\",1]]  1220  "
       ]
      },
-     "execution_count": 106,
+     "execution_count": 112,
      "metadata": {},
      "output_type": "execute_result"
     }
